--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ concurrency:
   group: pages
   cancel-in-progress: false
 jobs:
-  deploy:
+  github-pages:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
