--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "mlug.dk",
   "private": true,
   "scripts": {
-    "build": "eleventy --output=public",
-    "start": "eleventy --output=public --serve"
+    "build": "task build",
+    "start": "task serve"
   },
   "dependencies": {
-    "@11ty/eleventy": "^3.1.1"
+    "@11ty/eleventy": "^3.1.1",
+    "@go-task/cli": "^3.44.0",
+    "@tailwindcss/cli": "^4.1.10"
   }
 }
