--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,32 +2,30 @@ version: 3
 vars:
   OUTPUT: public
 tasks:
-  build-css:
+  css:
     internal: true
     cmds:
-      - npx tailwindcss --input=style.css --output={{.OUTPUT}}/style.css
-  build-html:
+      - npx tailwindcss --input=style.css --output={{.OUTPUT}}/style.css {{if .WATCH}}--watch{{end}}
+
+  html:
     internal: true
     env:
-      ELEVENTY_ENV: production
+      ELEVENTY_ENV: "{{.ENV}}"
     cmds:
-      - npx eleventy --output={{.OUTPUT}}
+      - npx eleventy --output={{.OUTPUT}} {{if .SERVE}}--serve{{end}}
+
   build:
     deps:
-      - build-css
-      - build-html
+      - task: css
+      - task: html
+        vars:
+          ENV: production
 
-  serve-css:
-    internal: true
-    cmds:
-      - npx tailwindcss --input=style.css --output={{.OUTPUT}}/style.css --watch
-  serve-html:
-    internal: true
-    env:
-      ELEVENTY_ENV: development
-    cmds:
-      - npx eleventy --output={{.OUTPUT}} --serve
   serve:
     deps:
-      - serve-css
-      - serve-html
+      - task: css
+        vars:
+          WATCH: true
+      - task: html
+        vars:
+          SERVE: true
