--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@11ty/eleventy": "^3.1.1",
     "@go-task/cli": "^3.44.0",
-    "@tailwindcss/cli": "^4.1.10"
+    "@tailwindcss/cli": "^4.1.10",
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
