--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@11ty/eleventy": "^3.1.1",
     "@go-task/cli": "^3.44.0",
     "@tailwindcss/cli": "^4.1.10",
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "luxon": "^3.6.1"
   }
 }
