--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,9 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: "0 7 * * *"
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 permissions:
   contents: read
